--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /BaiTap18102023/build/
 /BaiTap25102023/nbproject/private/
 /BaiTap25102023/build/
+/BaiTapWeb01112023/nbproject/private/
+/BaiTapWeb01112023/build/
