--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /BaiTap25102023/build/
 /BaiTapWeb01112023/nbproject/private/
 /BaiTapWeb01112023/build/
+/BaiTapWeb08112023/nbproject/private/
+/BaiTapWeb08112023/build/
